--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7Oa0DZ2yc0rwY80RRVHvT",
+      "authorship_tag": "ABX9TyNvnpWSVnahIeNcu8e8t0Q8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1412,7 +1412,7 @@
         },
         "outputId": "50e42a0e-79ea-404c-c7f2-f660bdb0540e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1428,7 +1428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "eluE6DIAIDTk"
       },
@@ -1470,7 +1470,7 @@
       "metadata": {
         "id": "n3ipmbIAJAuQ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1486,7 +1486,7 @@
       "metadata": {
         "id": "8ZAwNP6TLmzp"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1501,7 +1501,7 @@
         "id": "YjbG0Y6JJFLG",
         "outputId": "6445234e-f342-4d6e-a8e8-9e4bc5535038"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1553,7 +1553,7 @@
         "id": "8dFtBcG0JNJu",
         "outputId": "049d3aef-cb0a-47eb-ffca-1f6e0ac11fba"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1579,7 +1579,7 @@
         "id": "ETtdKP1fJci-",
         "outputId": "ef50282c-d99e-4ce6-a880-d199e1505874"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1641,7 +1641,7 @@
         "id": "Nhj348atJVKe",
         "outputId": "e255720a-8391-4c91-d588-b288c7bcf5c2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1683,7 +1683,7 @@
       "metadata": {
         "id": "gSi_GjZiSCb2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1694,7 +1694,7 @@
       "metadata": {
         "id": "R9p0aCkU3FJy"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1745,7 +1745,7 @@
         },
         "outputId": "46ba9a8e-9b80-4a5a-a56d-57f97e44b328"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1799,7 +1799,7 @@
       "metadata": {
         "id": "xZplXT8t3o-q"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1818,7 +1818,7 @@
         "id": "v0Ho2egH3shs",
         "outputId": "d955aa04-d140-4d99-cf86-675f5f60a01f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1843,7 +1843,7 @@
         "id": "UR-fbCmc3wEs",
         "outputId": "f2786e90-8463-446e-8dfe-f28e101372e5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1869,7 +1869,7 @@
         "id": "km8A64HV3yka",
         "outputId": "b06921bf-daf0-4352-c9e6-0a16558d7cd6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1895,7 +1895,7 @@
         "id": "3vZY_bL730eC",
         "outputId": "6007ecc3-c9c0-4f05-ddad-7d3faea1ee61"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1921,7 +1921,7 @@
         "id": "-hN03lMz33dE",
         "outputId": "dea1817e-9d91-4814-95f6-ab196c546a22"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1956,7 +1956,7 @@
         "id": "gglSvymT35a6",
         "outputId": "883dbb81-8409-45c2-8825-0c6606787e3c"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1992,7 +1992,7 @@
         "id": "-Ki1rMKP36w2",
         "outputId": "6bb5159f-db2f-476a-9e49-fe8498176f12"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2028,7 +2028,7 @@
         "id": "zx77eI393-3q",
         "outputId": "05242b00-5a9c-4876-804f-89ea64e07f46"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2062,7 +2062,7 @@
         "id": "uFxFFSJP4BUT",
         "outputId": "8169d2fc-0f60-4c14-80d9-0448b174023d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2118,7 +2118,7 @@
       "metadata": {
         "id": "DYq3QouP4E5L"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2136,7 +2136,7 @@
         "id": "FpaObMaa4RMC",
         "outputId": "f45633f1-701c-4e62-b4d7-bcf0d13c8e91"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2180,7 +2180,7 @@
       "metadata": {
         "id": "JKyj3E584VeS"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2220,7 +2220,7 @@
       "metadata": {
         "id": "XJJ0kN-u4jg7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2240,7 +2240,7 @@
       "metadata": {
         "id": "1Or6gNCl6wfD"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2255,7 +2255,7 @@
         "id": "L6LK3PpE6zqb",
         "outputId": "fd267cae-f3f8-4094-c385-2e3e907a27c8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2288,7 +2288,7 @@
       "metadata": {
         "id": "JJXCbYqE7C6K"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2306,7 +2306,7 @@
         },
         "outputId": "3ed9325d-364b-4161-bd64-52ea048f97b0"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2331,7 +2331,7 @@
         "id": "rT9oEzFZ7ccc",
         "outputId": "6129d289-565d-41a7-ef08-6fea067d6344"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2381,7 +2381,7 @@
         },
         "outputId": "c18c9743-03fc-4ceb-a03f-c8f5f5b9c4cc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2429,7 +2429,7 @@
         },
         "outputId": "83e7baaf-04d2-4b43-e309-905e254da1c3"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2467,7 +2467,7 @@
       "metadata": {
         "id": "nDyrLpNW8z6j"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2493,7 +2493,7 @@
       "metadata": {
         "id": "VNB7Xli4_k6h"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2509,7 +2509,7 @@
         },
         "outputId": "d82ab5c8-92b7-41c9-8b1e-bf2f874a8168"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2536,7 +2536,7 @@
         },
         "outputId": "ffee18c5-0250-4e5e-cb07-76bc79ca2fdf"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2564,7 +2564,7 @@
         },
         "outputId": "b92e7b29-24ea-4d92-9508-87e09722a01d"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2588,7 +2588,7 @@
         },
         "outputId": "267480bc-c63d-4b6a-ada7-c6080cf986aa"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2637,7 +2637,7 @@
         },
         "outputId": "ecdd4f83-29e2-4fe7-b072-fcc68bb67d36"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2686,7 +2686,7 @@
       "metadata": {
         "id": "Iqs_AbqNC3h6"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2714,7 +2714,7 @@
       "metadata": {
         "id": "Y556SnQ_DAdj"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2729,7 +2729,7 @@
         },
         "outputId": "3892b039-eea0-4673-9752-d0d882c7cfe1"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2749,7 +2749,7 @@
       "metadata": {
         "id": "OyjzeEOLZ-TC"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2812,10 +2812,59 @@
             "Val   loss 0.562851183137928 accuracy 0.8339805825242718\n",
             "\n",
             "Epoch 3/10\n",
-            "----------\n"
+            "----------\n",
+            "Train loss 0.11608946627685358 accuracy 0.9687786465354543\n",
+            "Val   loss 0.7062076018532165 accuracy 0.8495145631067961\n",
+            "\n",
+            "Epoch 4/10\n",
+            "----------\n",
+            "Train loss 0.08070997027901065 accuracy 0.980857373955244\n",
+            "Val   loss 0.7860768089608218 accuracy 0.8378640776699029\n",
+            "\n",
+            "Epoch 5/10\n",
+            "----------\n",
+            "Train loss 0.05026440436423431 accuracy 0.9884605014828795\n",
+            "Val   loss 0.9376739225974934 accuracy 0.8504854368932039\n",
+            "\n",
+            "Epoch 6/10\n",
+            "----------\n",
+            "Train loss 0.031479772551947775 accuracy 0.9932596387166353\n",
+            "Val   loss 1.117668704010206 accuracy 0.8368932038834951\n",
+            "\n",
+            "Epoch 7/10\n",
+            "----------\n",
+            "Train loss 0.0244159475793571 accuracy 0.9949851712051766\n",
+            "Val   loss 1.0860335747130403 accuracy 0.8543689320388349\n",
+            "\n",
+            "Epoch 8/10\n",
+            "----------\n",
+            "Train loss 0.012004224466649845 accuracy 0.9974656241574549\n",
+            "Val   loss 1.2921784125867606 accuracy 0.8466019417475728\n",
+            "\n",
+            "Epoch 9/10\n",
+            "----------\n",
+            "Train loss 0.00898890169086928 accuracy 0.9981126988406579\n",
+            "Val   loss 1.3112193597624284 accuracy 0.8495145631067961\n",
+            "\n",
+            "Epoch 10/10\n",
+            "----------\n",
+            "Train loss 0.0087388867553006 accuracy 0.9982205446211917\n",
+            "Val   loss 1.3209653816264249 accuracy 0.8495145631067961\n",
+            "\n",
+            "CPU times: user 1h 20min 16s, sys: 41.9 s, total: 1h 20min 58s\n",
+            "Wall time: 1h 22min 23s\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "auV1ZrQAZodp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
