--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -32,6 +32,7 @@
         "import transformers\n",
         "from transformers import BertModel, BertTokenizer, AdamW, get_linear_schedule_with_warmup\n",
         "import torch\n",
+        "import pickle\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
@@ -92,7 +93,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YjbG0Y6JJFLG",
-        "outputId": "1c638b6d-550a-4ef9-a63f-b3fca8af5150"
+        "outputId": "5c2a883e-2478-401d-f91c-6c267f52f959"
       },
       "outputs": [
         {
@@ -144,7 +145,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8dFtBcG0JNJu",
-        "outputId": "314b29f2-b213-490f-a9bb-6b1ec08b8fe3"
+        "outputId": "29559999-cc91-4a39-d9f4-8fbf84afe9c0"
       },
       "outputs": [
         {
@@ -170,7 +171,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ETtdKP1fJci-",
-        "outputId": "751e1970-4ce1-4948-fdd5-fa87b3a1e1a2"
+        "outputId": "4d4c4437-4a1d-4c2a-9c56-7aeaf7617cd3"
       },
       "outputs": [
         {
@@ -205,7 +206,7 @@
           "height": 1000
         },
         "id": "Nhj348atJVKe",
-        "outputId": "dfdf1902-b30a-4128-8c9d-4a01c18b092a"
+        "outputId": "e3a08e77-705b-4a47-e2a4-98308cf16d63"
       },
       "outputs": [
         {
@@ -322,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v0Ho2egH3shs",
-        "outputId": "63e299de-e28a-472f-abe7-02acaffe1c82"
+        "outputId": "6f735b59-4bb7-4f8f-850f-b11bd25c700d"
       },
       "outputs": [
         {
@@ -351,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UR-fbCmc3wEs",
-        "outputId": "0d84476f-eec4-4e65-c1a5-aff2f304e29f"
+        "outputId": "97d1cb7a-1d8e-491f-9c33-591f89be3629"
       },
       "outputs": [
         {
@@ -377,7 +378,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "km8A64HV3yka",
-        "outputId": "e657f99d-2eed-45ef-c63d-2d3a9a3a6fcb"
+        "outputId": "79d0c3d0-c4c0-46c8-bbfc-4c752ab03af0"
       },
       "outputs": [
         {
@@ -403,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3vZY_bL730eC",
-        "outputId": "db1c28a1-b82c-4c26-fe80-5c517555609a"
+        "outputId": "e5a2b5e6-d733-4358-f8df-d0143fc58047"
       },
       "outputs": [
         {
@@ -429,7 +430,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-hN03lMz33dE",
-        "outputId": "ed6b2293-6bc5-4064-bb5e-cd924e63d350"
+        "outputId": "0a8f799f-7364-4cc3-98ac-da2c2a248012"
       },
       "outputs": [
         {
@@ -455,7 +456,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gglSvymT35a6",
-        "outputId": "f1269ad7-ce91-404f-8193-f6b1d6583a01"
+        "outputId": "df9983ca-167b-4e3d-f500-8f443e1174bd"
       },
       "outputs": [
         {
@@ -499,7 +500,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Ki1rMKP36w2",
-        "outputId": "c9cc0d8a-1bc1-4d8d-fc9f-5f55b9e3b3bf"
+        "outputId": "f55ef28b-31d8-47b4-c808-e38d7299456d"
       },
       "outputs": [
         {
@@ -535,7 +536,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zx77eI393-3q",
-        "outputId": "12725584-1995-42ca-87f8-973534a51fff"
+        "outputId": "f895cdf1-8dee-4084-b400-90a4b68bdcbc"
       },
       "outputs": [
         {
@@ -570,7 +571,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uFxFFSJP4BUT",
-        "outputId": "c12af59a-d54f-427e-8691-1ec100ec7e10"
+        "outputId": "92f65da7-17a4-40e8-a2ef-f6d0987f7ae8"
       },
       "outputs": [
         {
@@ -642,7 +643,7 @@
           "height": 893
         },
         "id": "FpaObMaa4RMC",
-        "outputId": "6cf13aae-3aa6-4645-ae2a-46f33b9b674d"
+        "outputId": "424ad5ee-b66e-48e4-a538-6943dd4cc6df"
       },
       "outputs": [
         {
@@ -763,7 +764,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L6LK3PpE6zqb",
-        "outputId": "de5a8541-8326-4f88-b62e-1761e875d5c4"
+        "outputId": "b054dccd-c8f3-4e33-935e-18f240d18f0c"
       },
       "outputs": [
         {
@@ -811,7 +812,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7nQnMzOi7GuK",
-        "outputId": "dca2c11c-b96e-4e41-f7f0-1808c9887e57"
+        "outputId": "224777cb-d6b8-439b-d6d5-6bd285551ab0"
       },
       "outputs": [
         {
@@ -838,7 +839,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rT9oEzFZ7ccc",
-        "outputId": "56144e6e-7be8-4521-aa41-67c05b623014"
+        "outputId": "a99442c5-3c2d-4f30-a985-00fd3cd23790"
       },
       "outputs": [
         {
@@ -851,14 +852,14 @@
             "  warnings.warn(\n",
             "<ipython-input-25-373894f83794>:29: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
             "  'label': torch.tensor(label, dtype=torch.long),\n",
-            "/usr/local/lib/python3.9/dist-packages/transformers/tokenization_utils_base.py:2346: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
-            "  warnings.warn(\n",
             "<ipython-input-25-373894f83794>:29: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
             "  'label': torch.tensor(label, dtype=torch.long),\n",
             "/usr/local/lib/python3.9/dist-packages/transformers/tokenization_utils_base.py:2346: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
             "  warnings.warn(\n",
             "<ipython-input-25-373894f83794>:29: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
             "  'label': torch.tensor(label, dtype=torch.long),\n",
+            "/usr/local/lib/python3.9/dist-packages/transformers/tokenization_utils_base.py:2346: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+            "  warnings.warn(\n",
             "<ipython-input-25-373894f83794>:29: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
             "  'label': torch.tensor(label, dtype=torch.long),\n"
           ]
@@ -887,7 +888,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GYjd4GLW8SGS",
-        "outputId": "0d31f45b-b9a6-4283-d7dc-53c4d64556e3"
+        "outputId": "2507faf0-cdb3-437a-a45d-b7b533388980"
       },
       "outputs": [
         {
@@ -923,14 +924,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbT_JFLi8YvT",
-        "outputId": "9a374abe-9c8e-40af-c2db-9c15773effce"
+        "outputId": "7f4d809d-670b-463e-ed49-c23cd62b089d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias']\n",
+            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
             "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
             "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
           ]
@@ -988,7 +989,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RL9zEzUOBKyb",
-        "outputId": "1bb9d72c-e8ab-41a3-fa5f-0b3630c1231c"
+        "outputId": "22e39e88-4bcd-410f-e5c5-8f89bfecad58"
       },
       "outputs": [
         {
@@ -1015,14 +1016,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dzqPy0rt_yJZ",
-        "outputId": "9e12dae7-62cd-47e1-e31e-f1585a48458a"
+        "outputId": "43ea4038-c740-4ec8-f1e7-f09ca82b46f2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias']\n",
+            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
             "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
             "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
           ]
@@ -1041,7 +1042,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x6z8HJ6TAu5C",
-        "outputId": "c56846d5-e033-4d97-f1c1-ddc41243f4fc"
+        "outputId": "c8cf4906-c326-4e6d-deb0-704ec558eb85"
       },
       "outputs": [
         {
@@ -1068,7 +1069,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dVnyMxbnAyWr",
-        "outputId": "bb2ad0a9-147c-4fcc-afdc-82e529c085b6"
+        "outputId": "dfd5139c-30d6-404a-91ff-6f286a5e7515"
       },
       "outputs": [
         {
@@ -1109,7 +1110,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vkEqAyV_CZAS",
-        "outputId": "a5c968e4-c3f4-4895-e42e-751aa6009c52"
+        "outputId": "525f53ea-edb8-4229-8d32-0da3b207b4b5"
       },
       "outputs": [
         {
@@ -1209,7 +1210,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yMwafKneFWGq",
-        "outputId": "3483a69f-6bb3-403a-fccb-ce89cdfcb800"
+        "outputId": "a0b13a98-6a5f-4408-d1cd-4d44091f846a"
       },
       "outputs": [
         {
@@ -1244,7 +1245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aWMOui0HECSr",
-        "outputId": "f93814ab-4d8e-4046-f01d-465f433f012a"
+        "outputId": "54a7b6dc-d0d1-463d-c79b-a5f56fb8a80c"
       },
       "outputs": [
         {
@@ -1301,8 +1302,8 @@
             "Train loss 0.008093341798331525 accuracy 0.9985980048530602\n",
             "Val   loss 1.1653159819146262 accuracy 0.8592233009708737\n",
             "\n",
-            "CPU times: user 1h 13min, sys: 44.1 s, total: 1h 13min 44s\n",
-            "Wall time: 1h 15min 11s\n"
+            "CPU times: user 1h 19min 26s, sys: 43.8 s, total: 1h 20min 10s\n",
+            "Wall time: 1h 21min 47s\n"
           ]
         }
       ],
@@ -1336,9 +1337,14 @@
         "  history['train_loss'].append(train_loss)\n",
         "  history['val_acc'].append(val_acc)\n",
         "  history['val_loss'].append(val_loss)\n",
-        "  if val_acc > best_accuracy:\n",
-        "    torch.save(model.state_dict(), 'best_model_state.bin')\n",
-        "    best_accuracy = val_acc"
+        "  import pickle\n",
+        "\n",
+        "# your training code here\n",
+        "\n",
+        "if val_acc > best_accuracy:\n",
+        "    with open('best_model.pkl', 'wb') as f:\n",
+        "        pickle.dump(model, f)\n",
+        "    best_accuracy = val_acc\n"
       ]
     },
     {
@@ -1360,14 +1366,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_69kaH5QUkS1",
-        "outputId": "e45dca24-a773-4b0b-f981-7399ca7b63c7"
+        "outputId": "7a47628d-11f8-4dff-ad12-a3d1eaf21f75"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias']\n",
+            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
             "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
             "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
           ]
@@ -1375,7 +1381,9 @@
       ],
       "source": [
         "model = SentimentClassifier(len(df_train.sentiment_label.unique()))\n",
-        "model.load_state_dict(torch.load('best_model_state.bin'))\n",
+        "with open('best_model.pkl', 'rb') as f:\n",
+        "    model = pickle.load(f)\n",
+        "\n",
         "model = model.to(device)"
       ]
     },
@@ -1387,7 +1395,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j2NX1fX2VFv0",
-        "outputId": "4bbba70f-5a9b-4e51-da56-06d6c8aafe68"
+        "outputId": "19a1506a-dbb8-4b5e-c1a5-c7c44f36b0c4"
       },
       "outputs": [
         {
@@ -1455,7 +1463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "brAM9SmOX4SW",
-        "outputId": "ee8911a0-d999-47d7-f386-2172993cdfc9"
+        "outputId": "f020dd6a-8a1a-432e-aa10-70be03ecef2b"
       },
       "outputs": [
         {
@@ -1494,7 +1502,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N74C_SRibehn",
-        "outputId": "e0afe983-0a4b-473b-f62e-083e2089f158"
+        "outputId": "691e5328-124e-485f-f2ff-4bf243cdf002"
       },
       "outputs": [
         {
@@ -1527,7 +1535,7 @@
           "height": 738
         },
         "id": "8O_LAtcAcc8f",
-        "outputId": "af0f53ff-375d-42d8-afc6-782317221a32"
+        "outputId": "c3d8af15-6803-4ee9-f753-ec941f3f97ae"
       },
       "outputs": [
         {
@@ -1583,7 +1591,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62dfac38-c740-4705-9340-d22a9b236723"
+        "outputId": "d7301784-38d5-4457-93b2-52c2b0297be2"
       },
       "outputs": [
         {
@@ -1605,7 +1613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 55,
       "metadata": {
         "id": "84hzImWkfJ9Q"
       },
@@ -1616,7 +1624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 56,
       "metadata": {
         "id": "JV1y9tDwfObI"
       },
@@ -1635,13 +1643,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 57,
       "metadata": {
         "id": "gJ0-u0RGfTXf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e8c20a8-687a-4fcf-9299-84a77f7ea9a5"
+        "outputId": "1b6bd516-53ba-4d98-b463-e1d7428e7e7e"
       },
       "outputs": [
         {
@@ -1664,7 +1672,6 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "provenance": [],
       "include_colab_link": true
@@ -1676,7 +1683,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
